--- a/src/components/weather/WeatherStyle.css
+++ b/src/components/weather/WeatherStyle.css
@@ -1,4 +1,12 @@
-.App.hot {
+/* weather styles */
+
+.weather {
+  color:white
+}
+
+/* conditional weather styles */
+
+.weather.hot {
   background-image: linear-gradient(
       to bottom,
       rgba(255, 16, 16, 0.52),
@@ -10,11 +18,11 @@
   transition: 0.2s ease;
 }
 
-.App.cold {
+.weather.cold {
   background-image: linear-gradient(
       to bottom,
-      rgba(0, 255, 213, 0.52),
-      rgba(0, 0, 0, 0.73)
+      rgba(0, 255, 213, 0.2),
+      rgba(0, 0, 0, 0.3)
     ),
     url("../../assets/abstract-blue.jpg");
   background-repeat: no-repeat;
